<resources>
    <string name="app_name">一起兑币</string>
    <string name="view_titleView_fanhui">返回</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="hello">Hello World, QR_DemoActivity!</string>
    <string name="act_base_nodata">没有数据了</string>
    <string name="act_base_about">http://api.globalonline.cc/page/about_us_zh.html</string>
    <string name="act_base_about_test">http://test.g.api.stupid2brave.com/page/about_us_zh.html</string>
    <string name="act_base_fuwuxieyi">http://test.g.api.stupid2brave.com/page/service_agreement_zh.html</string>
    <string name="act_base_KLine">http://test.g.t.stupid2brave.com/index.php?r=wap/kline&amp;</string>
    <string name="act_base_fuzhichenggong">复制成功</string>
    <string name="act_base_yirenzheng">已认证</string>
    <string name="act_base_tishi">提示</string>
    <string name="act_base_queding">确定</string>
    <string name="act_base_quxiao">取消</string>
    <string name="act_base_tuichu">安全退出</string>
    <string name="act_base_istuichu">是否安全退出</string>
    <string name="act_base_nologin">您还没有登陆,去登陆</string>
    <string name="act_base_norenzhu">您还没认证,去认证</string>
    <string name="act_base_successful">恭喜，提交成功!</string>
    <string name="act_base_succ">成功</string>
    <string name="act_base_buy_successful">买入成功</string>
    <string name="act_base_sell_successful">卖出成功</string>
    <string name="act_base_buy">买</string>
    <string name="act_base_sell">卖</string>
    <string name="act_base_chongzhi_text">您要充值的金额</string>
    <string name="act_base_update_successful">修改成功</string>
    <string name="act_base_send_code">验证码发送成功</string>
    <string name="act_base_please_send_code">请申请验证码</string>
    <string name="act_base_registered_successfully">注册成功</string>
    <string name="act_base_no_wanzheng">请填写完整信息</string>
    <string name="act_base_noMoney">您已没有%币的余额，不可使用此币种转账！</string>
    <string name="act_base_gorenzheng">去认证</string>
    <string name="act_base_weichengjiao">未成交</string>
    <string name="act_base_chexiao">撤销</string>
    <string name="act_base_tishi_erweima">请确认二维码是否正确</string>
    <string name="act_base_not_data">还没有数据内容</string>
    <string name="act_base_gonggao_info">公告详情</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="act_main_title_home">一起兑币</string>
    <string name="act_main_title_dating">交易大厅</string>
    <string name="act_main_title_my">我的</string>
    <string name="act_user_login_phone">手机号码</string>
    <string name="act_user_login_pwd">密码</string>
    <string name="act_user_login_title">登陆</string>
    <string name="act_user_login_opera">注册</string>
    <string name="act_user_login_loging">登陆</string>
    <string name="act_user_login_kefuphone"></string>
    <string name="act_user_login_wangjipwd">忘记密码</string>
    <string name="act_user_registered_zhuce">注册</string>
    <string name="act_user_registered_phone">手机号码</string>
    <string name="act_user_registered_yanzhengma">请输入验证码</string>
    <string name="act_user_registered_getyanzhengma">获取验证码</string>
    <string name="act_user_registered_pwd">登陆密码</string>
    <string name="act_user_registered_repwd">确认密码</string>
    <string name="act_user_registered_guojia">国家</string>
    <string name="act_user_registered_tuijianren">推荐人ID(非必填)</string>
    <string name="act_user_registered_text">我已阅读并同意</string>
    <string name="act_user_registered_xieyi">《环球在线服务协议》</string>
    <string name="act_user_changeloginpassword_tijiao">保存修改</string>
    <string name="act_user_changeloginpassword_oldpwd">旧密码</string>
    <string name="act_user_changeloginpassword_newpwd">新密码</string>
    <string name="act_user_changeloginpassword_repwd">确认新密码</string>
    <string name="act_user_changeloginpassword_title">修改登陆密码</string>
    <string name="act_user_changeloginpassword_text">敬告：\n
        登录密码不要与交易密码或其他网站密码一致，由此产生的账号被盗，本站概不负责。</string>
    <string name="act_user_changetradepassword_tijiao">保存修改</string>
    <string name="act_user_changetradepassword_oldpwd">交易密码</string>
    <string name="act_user_changetradepassword_newpwd">确认交易密码</string>
    <string name="act_user_changetradepassword_repwd">请输入验证码</string>
    <string name="act_user_changetradepassword_title">设置/修改交易密码</string>
    <string name="act_user_changetradepassword_text">敬告：\n
        登录密码不要与交易密码或其他网站密码一致，由此产生的账号被盗，本站概不负责。</string>
    <string name="act_user_forgotaepassword_tijiao">确认</string>
    <string name="act_user_forgotaepassword_phone">手机号码</string>
    <string name="act_user_forgotaepassword_yanzhengma">请输入验证码</string>
    <string name="act_user_forgotaepassword_logpwd">登陆密码</string>
    <string name="act_user_forgotaepassword_relogpwd">确认登陆密码</string>
    <string name="act_user_forgotaepassword_title">忘记密码</string>
    <string name="act_myMenu_myact_title">我的</string>
    <string name="act_myMenu_myact_login">登录名：</string>
    <string name="act_myMenu_myact_loginNike">姓名：</string>
    <string name="act_myMenu_myact_UID">UID：</string>
    <string name="act_myMenu_myact_assets">总资产</string>
    <string name="act_myMenu_myact_RMBPay">人民币充值</string>
    <string name="act_myMenu_myact_RMBWithdraw">人民币提现</string>
    <string name="act_myMenu_myact_virtualPay">虚拟币充值</string>
    <string name="act_myMenu_myact_virtualWithdraw">虚拟币提现</string>
    <string name="act_myMenu_myact_entrustManager">委托管理</string>
    <string name="act_myMenu_myact_transaction">交易流水</string>
    <string name="act_myMenu_myact_shoukuan">我要收款</string>
    <string name="act_myMenu_myact_fukuan">我要付款</string>
    <string name="act_myMenu_myact_renzheng">实名认证</string>
    <string name="act_myMenu_myact_updateDLPwd">修改登陆密码</string>
    <string name="act_myMenu_myact_updateJYPwd">修改交易密码</string>
    <string name="act_myMenu_myact_messge">消息中心</string>
    <string name="act_myMenu_myact_GuanYuWoMen">关于我们</string>
    <string name="act_myMenu_myact_exit">安全退出</string>
    <string name="act_myMenu_myact_message">系统公告</string>
    <string name="act_myMenu_myact_setting">设置</string>
    <string name="act_user_certification_title">实名认证</string>
    <string name="act_user_certification_name">请输入姓名</string>
    <string name="act_user_certification_cardtype">请选择身份证类型</string>
    <string name="act_user_certification_idCard">请输入身份证号码</string>
    <string name="act_user_certification_sub">提交</string>
    <string name="act_baseAct_certificationResults_title">实名认证</string>
    <string name="act_baseAct_certificationResults_tex">您的身份信息</string>
    <string name="act_baseAct_certificationResults_seucc">已通过了环球在线网实名认证</string>
    <string name="act_baseAct_certificationResults_name">姓名:</string>
    <string name="act_baseAct_certificationResults_type">证件类型:</string>
    <string name="act_baseAct_certificationResults_idCard">证件号:</string>
    <string name="act_baseAct_certificationResults_date">认证时间:</string>
    <string name="act_mainTab_tradingFloor_chengjiaoe">成交额</string>
    <string name="act_mainTab_tradingFloor_chengjiaoliang">成交量</string>
    <string name="act_mainTab_tradingFloor_minprice">最低价</string>
    <string name="act_mainTab_tradingFloor_maxprice">最高价</string>
    <string name="act_mainTab_tradingFloor_jiaoyi">交易区</string>
    <string name="act_mainTab_tradingFloor_shiyan">试验区</string>
    <string name="act_virtualcurrency_title">交易</string>
    <string name="act_virtualcurrency_maiyijia">买一价:</string>
    <string name="act_virtualcurrency_sellyijia">卖一价:</string>
    <string name="act_virtualcurrency_mairu">买入</string>
    <string name="act_virtualcurrency_sellru">卖出</string>
    <string name="act_virtualcurrency_chedan">撤单</string>
    <string name="act_virtualcurrency_jiaoyi">交易</string>
    <string name="act_virtualcurrency_buysell">买／卖</string>
    <string name="act_virtualcurrency_price">价格(¥)</string>
    <string name="act_virtualcurrency_number">数量</string>
    <string name="act_mainTab_homepage_title">环球在线</string>
    <string name="act_mainTab_tradingFloor_title">首页</string>
    <string name="act_base_serviceAgreement_title">环球在线服务协议</string>
    <string name="act_RechargeRMBActivity_title">人民币充值</string>
    <string name="act_RechargeRMBActivity_op">充值记录</string>
    <string name="act_RechargeRMBActivity_tab1">网银充值</string>
    <string name="act_RechargeRMBActivity_tab2">支付宝充值</string>
    <string name="act_RechargeRMBActivity_zhanghao">充值账号\t\t</string>
    <string name="act_RechargeRMBActivity_price">充值金额\t\t</string>
    <string name="act_RechargeRMBActivity_name">充值人姓名</string>
    <string name="act_RechargeRMBActivity_phone">手机号\t\t\t</string>
    <string name="act_RechargeRMBActivity_shuoming">备注\t\t\t\t</string>
    <string name="act_RechargeRMBActivity_tijiao">提 交</string>
    <string name="act_RechargeRMBActivity_buzhou">请您按如下步骤操作：</string>
    <string name="act_RechargeRMBActivity_test">
        注意：银行卡汇款目前仅支持100.0元以上汇款,100.0元以下暂不支持，100.0元以下汇款一律不予处理。
        请您按如下步骤操作：\n
            1. 登录您的银行网银，选择转账汇款，或者去银行柜台，要求转账汇款。\n
            2. 按照下表填写银行汇款信息表单：
    </string>
    <string name="act_RechargeRMBActivity_test_zi1">收款人：</string>
    <string name="act_RechargeRMBActivity_test_zi2">收款人帐号：</string>
    <string name="act_RechargeRMBActivity_test_zi3">收款人开户行：</string>
    <string name="act_RechargeRMBActivity_test_zi4">金额：</string>
    <string name="act_RechargeRMBActivity_test_zi5">备注/附言/摘要：</string>
    <string name="act_RechargeRMBActivity_test_zi6">(转账汇款时请一定在“备注/附言/摘要”栏目里填写此数字，此数字只可使用一次，每次汇款请填写新生成的数字)</string>
    <string name="act_RechargeRMBActivity_test2">
        3. 然后根据要求和提示完成汇款。

    </string>
    <string name="act_RechargeRMBActivity_alipay_test">
        请您按如下步骤操作：\n
        1. 登录您的支付账号，进入"我要付款"。\n
        1、汇款成功后，系统会自动将您汇款金额充值到您的账户中，若因为没有正确备注而未充值到账的，请联系客服解决。\n
        2、建议使用支付宝和银行卡充值，充值时请在备注中按照要求注明信息!。\n
        3、在充值汇款的时候请务必按照系统要求在“付款说明”或“收款人附言”中注明附言，不然系统将无法识别导致充值失败。\n
        4、请不要用过期的未支付的链接进行充值，一律采用即时支付的方式进行汇款。
    </string>
    <string name="act_RechargeRMBActivity_test_alipay_zi1">充值方式:</string>
    <string name="act_RechargeRMBActivity_test_alipay_zi2">收款帐号:</string>
    <string name="act_WithdrawalRMBActivity_title">人民币提现</string>
    <string name="act_WithdrawalRMBActivity_op">提现记录</string>
    <string name="act_WithdrawalRMBActivity_banktype">选择银行类型</string>
    <string name="act_WithdrawalRMBActivity_bankNumber">请输入银行卡号</string>
    <string name="act_WithdrawalRMBActivity_rebankNumber">确认银行卡号</string>
    <string name="act_WithdrawalRMBActivity_name">收款人姓名</string>
    <string name="act_WithdrawalRMBActivity_kaihu">请输入开户支行</string>
    <string name="act_WithdrawalRMBActivity_price">提现金额</string>
    <string name="act_WithdrawalRMBActivity_pwd">交易密码</string>
    <string name="act_WithdrawalRMBActivity_tixian">提现</string>
    <string name="act_WithdrawalRMBActivity_text">
        重要提示：为了您的帐户安全，每次人民币提现的最高限额为%1$s 、提现的最低限额为%2$s ，提现手续费%3$s ，如果您有更高的需求，请与网站客服联系，银行卡提现不同的银行，实际到帐时间可能会有所延时。</string>
    <string name="act_virtualcurrency_chargeFees_title">虚拟币充值</string>
    <string name="act_virtualcurrency_chargeFees_op">充值记录</string>
    <string name="act_virtualcurrency_chargeFees_address">钱包地址</string>
    <string name="act_virtualcurrency_chargeFees_fuzhi">复 制</string>
    <string name="act_virtualcurrency_chargeFees_miaoshu">充值说明：</string>
    <string name="act_virtualcurrency_chargeFees_text">重要提示：本站已经支持往同一地址多次充值，我们将在收到3次确认以后为您充值成功。</string>
    <string name="act_virtualcurrency_archived_keyong">可用：</string>
    <string name="act_virtualcurrency_archived_dongjie">冻结：</string>
    <string name="act_virtualCurrency_shoukuan_title">收款</string>
    <string name="act_virtualCurrency_shoukuan_shuoming">收款说明</string>
    <string name="act_virtualCurrency_shoukuan_text">这里是说明内容</string>
</resources>