<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:myxmlns="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/ac_base_backgroud"
    android:focusableInTouchMode="true"
    tools:context="com.global.globalonline.activities.RMB.WithdrawalRMBActivity">


    <com.global.globalonline.view.TitleView_
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        myxmlns:titletxt="@string/act_WithdrawalRMBActivity_title"
        myxmlns:operationtxt="@string/act_WithdrawalRMBActivity_op"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@drawable/et_input"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >


        <TextView

            android:id="@+id/tv_banktype"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_banktype"
            style="@style/editText"
            android:paddingRight="6dp"
            android:drawableRight="@drawable/xiala_bai"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"

        >



        <EditText
            android:id="@+id/et_cardNum"
            android:inputType="number"
            android:maxLength="23"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingRight="6dp"
            android:hint="@string/act_WithdrawalRMBActivity_bankNumber"

            style="@style/editText"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >
        <EditText
            android:id="@+id/et_reCardNum"
            android:inputType="number"
            android:maxLength="23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_rebankNumber"
            style="@style/editText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >


        <EditText
            android:id="@+id/et_toName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_name"
            style="@style/editText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >


        <EditText
            android:id="@+id/et_kaihuhang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_kaihu"
            style="@style/editText"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >
        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_price"
            android:inputType="numberDecimal"
            style="@style/editText"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_registered_higth"
        android:background="@color/ac_user_login_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        >
        <EditText
            android:id="@+id/et_trade_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/act_WithdrawalRMBActivity_pwd"
            style="@style/editText"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <Button
            android:id="@+id/btn_tijiao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/act_WithdrawalRMBActivity_tixian"
            android:textColor="@color/white"
            android:background="@drawable/act_login_loging"
            />
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:text="@string/act_RechargeRMBActivity_buzhou"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/ac_base_ziti_hui"
        android:text="@string/act_WithdrawalRMBActivity_text"
        />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
