<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:myxmlns="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/ac_base_backgroud"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.global.globalonline.activities.RMB.RechargeRMBActivity">


    <com.global.globalonline.view.TitleView_
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        myxmlns:titletxt="@string/act_RechargeRMBActivity_title"
        myxmlns:operationtxt="@string/act_RechargeRMBActivity_op"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/act_RechargeRMBActivity_tab1"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:background="@color/ac_virtual_chunk"
            android:layout_marginRight="2dp"
            />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/act_RechargeRMBActivity_tab2"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:background="@color/ac_virtual_chunk"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/ac_virtual_chunk"
        >
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_RechargeRMBActivity_zhanghao"
                android:textColor="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/et_input"
                android:textColor="@color/white"
                android:paddingLeft="6dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_RechargeRMBActivity_name"
                android:textColor="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="40dp"
                android:paddingLeft="6dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/et_input"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_RechargeRMBActivity_price"
                android:textColor="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/et_input"
                android:paddingLeft="6dp"
                android:textColor="@color/white"
                android:layout_marginLeft="6dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_RechargeRMBActivity_shuoming"
                android:textColor="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/et_input"
                android:paddingLeft="6dp"
                android:textColor="@color/white"
                android:layout_marginLeft="6dp"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_queding"
            android:textColor="@color/white"
            android:text="@string/act_RechargeRMBActivity_tijiao"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/act_RechargeRMBActivity_buzhou"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ac_base_ziti_hui"
            android:text="@string/act_RechargeRMBActivity_test"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ac_base_ziti_hui"
            android:text="@string/act_user_login_kefuphone"
            />


    </LinearLayout>


</LinearLayout>
</ScrollView>


</LinearLayout>
