<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:myxmlns="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/ac_base_backgroud"

    tools:context="com.global.globalonline.activities.virtualCurrency.ShouKuanActivity">

    <com.global.globalonline.view.TitleView_
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        myxmlns:titletxt="@string/act_virtualCurrency_shoukuan_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        >

       <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"

           />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ac_base_ziti_hui"
        android:paddingLeft="10dp"
        android:text="@string/act_virtualCurrency_shoukuan_shuoming"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ac_base_ziti_hui"
        android:paddingLeft="10dp"
        android:text="@string/act_virtualCurrency_shoukuan_text"
        />

</LinearLayout>
